--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,8 +20,16 @@ spring:
         time-between-eviction-runs: 10s
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+
+############## knife4j 配置 (官网: https://doc.xiaominfo.com/) ##############
+# knife4j的使用至少需要加入一个配置
+knife4j:
+  setting:
+    language: zh_cn
+
 mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
+
 logging:
   level:
     com.hmdp: debug
